# CSCE240

./: makefile  zdExecuteScript.txt  zzuu.txt
Homework 03/: CMakeLists.txt  xxpulling.txt  yysausage.txt
Homework 03/Utilities/: scanline.cc  scanner.cc  utils.cc.bup  utils.h.bup
Homework 03/mydirectory/volpestephen_hw3/: parseintoxml.cc  xxpullingstdout.txt  zzuulog
Homework 03/testdirectory/volpestephen_hw3/: Aprog  main.cc  xxpullinglog  zstdout.txt  zzuustdout.txt
Utilities/: scanline.h  scanner.h  utils.cc  utils.h
mydirectory/volpestephen_hw3/: .parseintoxml.cc.swp  main.cc  parseintoxml.h  xmlitem.cc  xmlitem.h
testdirectory/volpestephen_hw3/: main.h  parseintoxml.cc  testlog.txt
